--- a/src/pages/overview/components/threeDoughnuts/threeDoughnuts.css
+++ b/src/pages/overview/components/threeDoughnuts/threeDoughnuts.css
@@ -53,6 +53,7 @@
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
+    margin-top: 0px;
 }
 
 .threeDoughnuts_bottom {
