--- a/src/pages/overview/components/Frequency/frequency.css
+++ b/src/pages/overview/components/Frequency/frequency.css
@@ -1,16 +1,16 @@
-.threeDoughnuts {
+.frequency {
     width: 100%;
     height: 250px;
     border-radius: 5px;
 }
-.threeDoughnuts_top {
+.frequency_top {
     width: 100%;
     height: 20%;
     background-color: #202020;
     display: flex;
     justify-content: space-between;
 }
-.threeDoughnuts_top_title {
+.frequency_top_title {
     width: 50%;
     height: 100%;
     font-size: 11px;
@@ -21,7 +21,7 @@
     color: white;
     font-family: Arial, Helvetica, sans-serif;
 }
-.threeDoughnuts_top_icons {
+.frequency_top_icons {
     width: 100px;
     height: 100%;
     display: flex;
@@ -29,11 +29,11 @@
     justify-content: space-evenly;
     cursor: pointer;
 }
-.threeDoughnuts_top_icons>img {
+.frequency_top_icons>img {
     width: 20px;
 }
 
-.threeDoughnuts_main {
+.frequency_main {
     width: 100%;
     height: 40%;
     background-color: #272727;
@@ -56,18 +56,18 @@
     margin-top: 0px;
 }
 
-.threeDoughnuts_bottom {
+.frequency_bottom {
     width: 100%;
     height: 20%;
     display: flex;
     align-items: center;
     background-color: #272727;
 }
-.threeDoughnuts_bottom>img {
+.frequency_bottom>img {
     width: 15px;
     margin-left: 20px;
 }
-.threeDoughnuts_bottom>p {
+.frequency_bottom>p {
     font-size: 11px;
     color: white;
     margin-left: 5px;
